--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.9",
+    "@tanstack/react-query": "^5.90.7",
+    "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "viem": "2.x",
+    "wagmi": "^2.19.2"
   },
   "devDependencies": {
     "typescript": "^5",
